--- a/index.dev.html
+++ b/index.dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>What neightborhood am I in?</title>
+    <title>What neighborhood am I in?</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="style.dev.css" />
     <script src="//maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
