--- a/index.dev.html
+++ b/index.dev.html
@@ -10,7 +10,8 @@
   <body>
     <div></div>
     <form action="#">
-        <input type="text" placeholder="Enter address" />
+        <datalist id="addresses"><select name="addresses"></select></datalist>
+        <input type="text" placeholder="Enter an address." list="addresses" />
     </form>
     <p></p>
   </body>
