--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><title>What neighborhood am I in?</title><meta name="viewport" content="initial-scale=1.0, user-scalable=no" /><link rel="stylesheet" href="style.min.css" /><script src="//maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script><script type="text/javascript" src="script.min.js"></script></head><body><div></div><form action="#"><input type="text" placeholder="Enter an address." /></form><p></p></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>What neighborhood am I in?</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </head>
+  <body>
+    <div></div>
+    <form action="#">
+        <datalist id="addresses"><select name="addresses"></select></datalist>
+        <input type="text" placeholder="Enter an address." list="addresses" />
+    </form>
+    <p></p>
+  </body>
+</html>
