--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="build/build.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <script src="chi_neighborhoods.geojson" type="text/javscript"></script>
     <script src="build/_bower.js" type="text/javascript"></script>
+    <script src="contrib.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="map"></div>
@@ -15,5 +17,5 @@
     </form>
     <p></p>
   </body>
-  <script src="testscript.js" type="text/javascript"></script>
+  <script src="script.js" type="text/javascript"></script>
 </html>
