--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <div id="map"></div>
-    <form onsubmit="searchAddress(true); return false;"> 
+    <form onsubmit="searchAddress(true); return false;">
         <datalist id="addresses"><select name="addresses"></select></datalist>
-        <input type="text" placeholder="Enter an address." list="addresses" />
+        <input type="text" list="addresses" />
     </form>
     <p></p>
   </body>
