--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
   <head>
     <title>What neighborhood am I in?</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="build/build.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="chi_neighborhoods.geojson" type="text/javscript"></script>
-    <script src="build/_bower.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+
   </head>
   <body>
     <div id="map"></div>
-    <div id="search-container">
-      <input class="typeahead" id="addr-search" type="text">
+    <div id="geo-result">
+      <span id="loading">Finding you...</span>
+      <span id="found">You're in <span id="location"></span></span>
     </div>
-    <p id="geo-result"></p>
+
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/geojson-utils@1.1.0/geojson-utils.min.js"></script>
+
+    <script src="script.js" type="text/javascript"></script>
+
+    <script>(function (i, s, o, g, r, a, m) { i.GoogleAnalyticsObject = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments); }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m); }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga')); ga('create', 'UA-40976307-2', 'wnaii.com'); ga('send', 'pageview');</script>
   </body>
-  <script src="script.js" type="text/javascript"></script>
 </html>
