--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>What neighborhood am I in?</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>What neighborhood am I in?</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.min.css" />
+</head>
+<body>
+  <div id="map"></div>
+  <div id="geo-result">
+    <span id="loading">Finding you...</span>
+    <span id="found">You're in <span id="location"></span></span>
+  </div>
 
-  </head>
-  <body>
-    <div id="map"></div>
-    <div id="geo-result">
-      <span id="loading">Finding you...</span>
-      <span id="found">You're in <span id="location"></span></span>
-    </div>
-
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/geojson-utils@1.1.0/geojson-utils.min.js"></script>
-
-    <script src="script.js" type="text/javascript"></script>
-
-    <script>(function (i, s, o, g, r, a, m) { i.GoogleAnalyticsObject = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments); }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m); }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga')); ga('create', 'UA-40976307-2', 'wnaii.com'); ga('send', 'pageview');</script>
-  </body>
+  <script async src="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet-src.min.js"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/geojson-utils@1.1.0/geojson-utils.min.js"></script>
+  <script async src="./assets/js/script.js"></script>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i.GoogleAnalyticsObject = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments);
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m);
+    }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'));
+    ga('create', 'UA-40976307-2', 'wnaii.com');
+    ga('send', 'pageview');
+  </script>
+</body>
 </html>
