--- a/lite/index.html
+++ b/lite/index.html
@@ -6,18 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>What neighborhood am I in?</title>
     <style>
-        :root {
-            --bg: #f1f3f4;
-            --text: #202124;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --bg: #202124;
-                --text: #FFF;
-            }
-        }
-
         html,
         body {
             height: 100%;
@@ -25,22 +13,30 @@
 
         body {
             font-size: 10px;
-            color: var(--text);
-            background-color: var(--bg);
+            background-color: #f1f3f4;
+            color: #202124;
+
             display: grid;
             place-items: center;
-            margin: 0;
             text-align: center;
         }
 
 
         div {
-            font-size: clamp(10em, 2em, 30em);
+            font-size: clamp(3em, 10vw, 10em);
+            padding-inline: 30px;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #202124;
+                color: #FFF;
+            }
         }
     </style>
 </head>
 <body>
-    <div>Finding you...</div>
+    <div>Finding what neighborhood you're in.</div>
 
     <script>
         const $out = document.querySelector('div');
@@ -52,9 +48,8 @@
                     longitude
                 }
             }) => {
-
                 fetch(
-                        `https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${latitude}&longitude=${longitude}&localityLanguage=en`
+                        `https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${latitude}&longitude=${longitude}`
                     )
                     .then((response) => response.json())
                     .then((data) => {
@@ -62,7 +57,22 @@
                     })
                     .catch((error) => console.error(error));
             },
-            (err) => console.error(`ERROR(${err.code}): ${err.message}`), {
+            (error) => {
+                switch (error.code) {
+                    case GeolocationPositionError.TIMEOUT:
+                        // Handle timeout.
+                        $out.innerText = 'Timeout';
+                        break;
+                    case GeolocationPositionError.PERMISSION_DENIED:
+                        // User denied the request.
+                        $out.innerText = 'Please enable location services for this app in your browser settings.';
+                        break;
+                    case GeolocationPositionError.POSITION_UNAVAILABLE:
+                        // Position not available.
+                        $out.innerText = 'Location information is unavailable.';
+                        break;
+                }
+            }, {
                 enableHighAccuracy: false,
                 timeout: 5000,
                 maximumAge: 0,
